Fix table alignment

--- a/Minity.css
+++ b/Minity.css
@@ -34,6 +34,26 @@
 
     label {font-size: 12px; font-weight: normal;}
 
+    .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,
+    .col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12 {
+        float: left;
+    }
+    .form-group .col-md-2 {
+        min-width: 150px;
+    }
+    .form-group .col-md-3 {
+        width: auto;
+    }
+    .form-group .col-md-2 .form-control {
+        width: auto;
+    }
+    .form-group .col-md-3 .form-control {
+        width: auto;
+    }
+    .form-horizontal .control-label {
+        text-align: left;
+    }
+
     .alert {
         -webkit-border-radius: 3px;
         border-radius:         3px;
@@ -202,8 +222,8 @@
             color:                 #FFF;
             cursor:                pointer;
             display:               inline-block;
-            font-size:             10px;
-            padding:               2px 6px;
+            font-size:             12px;
+            padding:               2px 8px;
             text-align:            center;
         }
         .btn-whoaverse-medium:hover {
@@ -1296,11 +1316,11 @@
                     display:               block;
                     font-size:             15px;
                     line-height:           30px;
-                    margin:                0 auto;
+                    margin:                0;
                     padding:               0;
                     text-align:            center;
                     text-shadow:           0 1px 0 hsla(0,0%,0%,0.3);
-                    width:                 100%;
+                    width:                 360px;
                 }
 
                 .modal-body .col-md-4 {padding: 0;}
@@ -1309,16 +1329,17 @@
                     -webkit-border-radius: 0 0 3px 3px;
                     border-radius:         0 0 3px 3px;
                     border-top:            0;
+                    clear:                 both;
                     font-size:             15px;
-                    height:                30px;
-                    margin:                0 auto;
-                    text-align:            center;
+                    height:                36px;
+                    margin:                0;
+                    text-align:            left;
                     -webkit-transition:    border-color 0.25s ease-in-out;
                     -moz-transition:       border-color 0.25s ease-in-out;
                     -ms-transition:        border-color 0.25s ease-in-out;
                     -o-transition:         border-color 0.25s ease-in-out;
                     transition:            border-color 0.25s ease-in-out;
-                    width:                 100%;
+                    width:                 360px;
                 }
                 .modal-body .col-md-4 input.form-control:focus{
                     border-color: #4C9FD2;
@@ -1356,6 +1377,10 @@
             padding:    15px;
             text-align: center;
         }
+
+    .col-md-offset-2 {margin-left: 0;}
+    .col-md-4 {width: 100%;}
+    .col-md-4 {float: none !important;}
 
 
 /* ! Responsivity
